Bug 231203 fix regression (from bug 214797 nsFileSpec to nsIFile conversion) that stopped searchplugins that didn't use .gif images from loading r=darin sr=jag